--- a/exam-2/1.html
+++ b/exam-2/1.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,15 +10,12 @@
 </body>
 </html>
 <script>
-    let a=1;
-    let ans=0;
-    do{
-        if(a % 2 === 0)
-        {
-            ans++;
-        }
-        a++;
-    }while(a<=20);
+    
+    for (var i = 1; i < 50; i++) {
 
-    console.log(ans);
+    if (i % 15 == 0) console.log("FizzBuzz");
+    else if (i % 3 == 0) console.log("Fizz");
+    else if (i % 5 == 0) console.log("Buzz");
+    else console.log(i);
+}
 </script>
