--- a/final-2/1.html
+++ b/final-2/1.html
@@ -11,7 +11,7 @@
 <body>
     <div class="main1">
 
-        <input type="text" id="input" placeholder="ENTER CITY FOR VIEW WEATHER"><br><br><br>
+        <input type="text" id="input" placeholder="ENTER CITY"><br><br><br>
         <button onclick="search() " class="btn">View</button>
         <div id="m1"></div>
         <div id="main">
